Fixed indexpage scrollbar bug

--- a/styles/gamesStyles.css
+++ b/styles/gamesStyles.css
@@ -8,6 +8,10 @@
   --pixel-7: #0597e9;
 }
 
+* {
+  overflow-x: hidden;
+}
+
 .title {
   margin: 40px;
   text-align: center;
